Update GPT2_LLM_MLflow_Fine_Tuning .ipynb

--- a/MLflow/GPT2_LLM_MLflow_Fine_Tuning .ipynb
+++ b/MLflow/GPT2_LLM_MLflow_Fine_Tuning .ipynb
@@ -770,8 +770,8 @@
       "source": [
         "import boto3\n",
         "\n",
-        "AWS_ACCESS_KEY_ID = \"AKIAY2PLGPOOCYHDK5VK\"\n",
-        "AWS_SECRET_ACCESS_KEY = \"DOKo8XX50a3aI5KeFeAuNZygD8fmwA3X6i6tcxBp\"\n",
+        "AWS_ACCESS_KEY_ID = \"<your-aws_key_id>\"\n",
+        "AWS_SECRET_ACCESS_KEY = \"<your_aws_secret_access_key>\"\n",
         "S3_BUCKET_NAME = 'myfreetrial'\n",
         "\n",
         "def s3_client():\n",
